--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -5,7 +5,7 @@
     <div id="header-menu-id" class="header-menu-container" >
       
       <a href="/help.html">
-        <img  class="header-logo" src="/assets/svg/help.svg" alt="join logo" />
+        <img  class="header-logo" src="/assets/img/help.png" alt="join logo" />
         </a>
       <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
       <div id="logout-id" class="logout-dropdown">
