--- a/css/board/board.css
+++ b/css/board/board.css
@@ -52,6 +52,7 @@
     position: relative;
     margin-top: 24px;
     max-width: 100vw;
+    min-width: 200px;
 }
 
 .add-task-2 {
@@ -68,7 +69,7 @@
 }
 
 .drag-area {
-    height: 48px;
+    min-height: 48px;
     max-width: 100vw;
     font-size: 16px;
     color: #A8A8A8;
@@ -92,3 +93,4 @@
     min-height: 244px;
     border-radius: 24px;
 }
+
