--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -579,3 +579,16 @@ li:hover .hidden-Edit_menu {
     left: 1180px;
   }
 }
+
+.x-button-addTask {
+  background-image: url(/assets/img/board_close.png);
+  background-color: var(--white-color);
+  position: fixed;
+  top: 120px;
+  right: 40px;
+  height: 32px;
+  width: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+}
