--- a/css/board/board.css
+++ b/css/board/board.css
@@ -94,3 +94,41 @@
     border-radius: 24px;
 }
 
+#overlay-add-id {
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    margin: 100px 10px 80px 10px;
+    width: auto;
+    height: auto;
+    background-color: var(--white-color);
+    display: none;
+}
+
+.content-container-board {
+    position: sticky;
+    overflow-y: auto;
+    max-height: calc(100vh - 254px);
+    padding: 20px 20px 35px 20px;
+    z-index: 100;
+    transition: all 300ms ease-in-out; 
+}
+
+.content-bottom-container-board {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    position: absolute;
+    font-size: 20px;
+    padding-inline: 16px;
+    height: 85px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: all 300ms ease-in-out;
+    z-index: 101;
+    margin-top: 10px;
+}
