--- a/css/board/board.css
+++ b/css/board/board.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--white-color);
 }
 
 .find-task input {
@@ -131,4 +132,17 @@
     transition: all 300ms ease-in-out;
     z-index: 101;
     margin-top: 10px;
+}
+
+.x-button-addTask {
+    background-image: url(/assets/img/board_close.png);
+    background-color: var(--white-color);
+    position: fixed;
+    top: 120px;
+    right: 35px;
+    height: 32px;
+    width: 32px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
 }
