--- a/css/board/board.css
+++ b/css/board/board.css
@@ -1,148 +1,147 @@
 .board {
-    margin: 128px 16px 0 16px;
+  margin: 128px 16px 0 16px;
 }
 
 .add-task {
-    position: absolute;
-    top: 136px;
-    right: 16px;
-    background-color: var(--mockup-color);
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-    padding: 3px;
-    border: none;
+  position: absolute;
+  top: 136px;
+  right: 16px;
+  background-color: var(--mockup-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  padding: 3px;
+  border: none;
 }
 
 .find-task {
-    margin-top: 40px;
-    height: 48px;
-    max-width: 100vw;
-    border: 1px solid #A8A8A8;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--white-color);
+  margin-top: 40px;
+  height: 48px;
+  max-width: 100vw;
+  border: 1px solid #a8a8a8;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--white-color);
 }
 
 .find-task input {
-    border: none;
-    height: 32px;
-    font-size: 20px;
-    color: var(--placeholder-color);
-    margin: 16px 0 16px 8px;
+  border: none;
+  height: 32px;
+  font-size: 20px;
+  color: var(--placeholder-color);
+  margin: 16px 0 16px 8px;
 }
 
 .find-task button {
-    background-image: url(/assets/img/search.png);
-    background-repeat: no-repeat;
-    background-position: right;
-    height: 32px;
-    width: 32px;
-    border-top: none;
-    border-right: none;
-    border-bottom: none;
-    background-color: var(--white-color);
-    margin: 16px 8px 16px 0;
-    padding-left: 16px;
-
+  background-image: url(/assets/img/search.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  height: 32px;
+  width: 32px;
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+  background-color: var(--white-color);
+  margin: 16px 8px 16px 0;
+  padding-left: 16px;
 }
 
 .board-box {
-    position: relative;
-    margin-top: 24px;
-    max-width: 100vw;
-    min-width: 200px;
+  position: relative;
+  margin-top: 24px;
+  max-width: 100vw;
+  min-width: 200px;
 }
 
 .add-task-2 {
-    position: absolute;
-    top: 0;
-    right: 0px;
-    background-color:  var(--white-color);
-    width: 30px;
-    height: 30px;
-    border: 2px solid var(--mockup-color);
-    border-radius: 10px;
-    padding: 3px;
-    gap: 10px;
+  position: absolute;
+  top: 0;
+  right: 0px;
+  background-color: var(--white-color);
+  width: 30px;
+  height: 30px;
+  border: 2px solid var(--mockup-color);
+  border-radius: 10px;
+  padding: 3px;
+  gap: 10px;
 }
 
 .drag-area {
-    min-height: 48px;
-    max-width: 100vw;
-    font-size: 16px;
-    color: #A8A8A8;
-    background-color: #E7E7E7;
-    border: 1px dashed #A8A8A8;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 16px;
-    margin-bottom: 26px;
-} 
+  min-height: 48px;
+  max-width: 100vw;
+  font-size: 16px;
+  color: #a8a8a8;
+  background-color: #e7e7e7;
+  border: 1px dashed #a8a8a8;
+  border-radius: 10px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 26px;
+}
 
 .drag-area-highlight {
-    background-color: #e7e7e7dd;
+  background-color: #e7e7e7dd;
 }
 
 .task {
-    background-color: rgb(19, 6, 251);
-    width: 252px;
-    min-height: 244px;
-    border-radius: 24px;
+  background-color: rgb(19, 6, 251);
+  width: 252px;
+  min-height: 244px;
+  border-radius: 24px;
 }
 
 #overlay-add-id {
-    position: absolute;
-    top: 10px;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    margin: 100px 10px 80px 10px;
-    width: auto;
-    height: auto;
-    background-color: var(--white-color);
-    display: none;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  margin: 100px 10px 80px 10px;
+  width: auto;
+  height: auto;
+  background-color: var(--white-color);
+  display: none;
 }
 
 .content-container-board {
-    position: sticky;
-    overflow-y: auto;
-    max-height: calc(100vh - 254px);
-    padding: 20px 20px 35px 20px;
-    z-index: 100;
-    transition: all 300ms ease-in-out; 
+  position: sticky;
+  overflow-y: auto;
+  max-height: calc(100vh - 254px);
+  padding: 20px 20px 35px 20px;
+  z-index: 100;
+  transition: all 300ms ease-in-out;
 }
 
 .content-bottom-container-board {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: white;
-    position: absolute;
-    font-size: 20px;
-    padding-inline: 16px;
-    height: 85px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transition: all 300ms ease-in-out;
-    z-index: 101;
-    margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  position: absolute;
+  font-size: 20px;
+  padding-inline: 16px;
+  height: 85px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: all 300ms ease-in-out;
+  z-index: 101;
+  margin-top: 10px;
 }
 
 .x-button-addTask {
-    background-image: url(/assets/img/board_close.png);
-    background-color: var(--white-color);
-    position: fixed;
-    top: 120px;
-    right: 35px;
-    height: 32px;
-    width: 32px;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
+  background-image: url(/assets/img/board_close.png);
+  background-color: var(--white-color);
+  position: fixed;
+  top: 120px;
+  right: 35px;
+  height: 32px;
+  width: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
 }
