--- a/css/board/board_card.css
+++ b/css/board/board_card.css
@@ -1,184 +1,165 @@
-.show-overlay {
-    position: absolute;
-    top: 110px;
-    bottom: 90px;
-    left: 10px;
-    right: 10px;
-    height: auto;
-    background: rgb(255, 255, 255);
-    z-index: 989;
-    overflow: hidden;
-    transition: all 300ms ease-in-out;
-}
-
-.show-overlay.show-card-visible {
-    transform: translateX(0%);
-}
-
 .board-card {
-    background-color: var(--white-color);
-    width: 252px;
-    border-radius: 24px;
-    padding: 16px;
-    position: relative;
+  background-color: var(--white-color);
+  width: 252px;
+  border-radius: 24px;
+  padding: 16px;
+  margin-right: 24px;
 }
 
-.container-1 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.category-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
-.categorie-block {
-    background-color: #0038FF;
-    color: var(--white-color);
-    width: 113px;
-    height: 27px;
-    padding: 4px,  16px, 4px, 16px;
-    border-radius: 8px;
-
+.category-block {
+  color: var(--white-color);
+  background-color: #0038ff;
+  text-align: center;
+  padding: 4px 16px 4px 16px;
+  border-radius: 8px;
 }
-
 
 .x-button-board {
-    display: none;
+  display: none;
 }
 
-.container-2 {
-    margin-top: 24px;
+.task-container,
+.priority-block {
+  margin-top: 24px;
 }
 
 .title-block {
-    margin-bottom: 8px;
-    font-size: 16px;
-    font-weight: 700;   
+  margin-bottom: 8px;
+  color: var(--mockup-color);
+  font-weight: 700;
 }
 
 .description-block {
-   margin-bottom: 24px;
-   color: #A8A8A8;
-   font-size: 16px; 
-   font-weight: 400;
+  max-height: 38px;
+  overflow: hidden;
+  margin-bottom: 24px;
+  color: #a8a8a8;
+}
+.subtasks-block,
+.priority-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .date-prio-block {
-    display: none;
+  display: none;
 }
 
 .static-block {
-    color: #42526E;
-    padding-right: 25px;
+  color: #42526e;
+  padding-right: 25px;
 }
 
 .static-block div {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .changeing-block div {
-    margin-bottom: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .assignedTo {
-    display: none;
+  display: none;
 }
 
 .assignedTo-box {
-    position: absolute;
-    bottom: 16px;
-    left: 16px;
-    height: 32px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+  height: 32px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .assignedTo-pic {
-    width: 32px;
-    height: 32px;
-    border-radius: 45px;
-    margin-right: 16px;
-    
+  width: 32px;
+  height: 32px;
+  border-radius: 45px;
+  margin-right: 16px;
 }
 
 .assignedTo-text {
-    display: none;
+  display: none;
 }
 
 .little-card-subtasks {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
-    display: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  display: none;
 }
 
 .relativ {
-    position: relative;
+  position: relative;
 }
 
 .gray {
-    width: 128px;
-    height: 8px;
-    background-color: #F4F4F4;
-    border-radius: 16px;
-    position: absolute;
-    left: 16px;
+  width: 128px;
+  height: 8px;
+  background-color: #f4f4f4;
+  border-radius: 16px;
+  position: absolute;
+  left: 16px;
 }
 
 .blaue {
-    width: 64px;
-    height: 8px;
-    border-radius: 16px;
-    background-color: #4589FF;
-    position: absolute;
+  width: 64px;
+  height: 8px;
+  border-radius: 16px;
+  background-color: #4589ff;
+  position: absolute;
 }
 
 .little-subtask {
-    position: relative;
-    font-size: 12px;
-    margin-left: 150px;
+  position: relative;
+  font-size: 12px;
+  margin-left: 150px;
 }
 
-
 .subtask {
-   display: none;
+  display: none;
 }
 
 .subtask-box {
-    margin-top: 8px;
-    padding: 4px 0 4px 16px;
+  margin-top: 8px;
+  padding: 4px 0 4px 16px;
 }
 
 .delete-edit {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 24px;
-    gap: 8px;
-    display: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 24px;
+  gap: 8px;
+  display: none;
 }
 
 .delete-edit-box {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .delete-edit image {
-    height: 24px;
-    width: 24px;
+  height: 24px;
+  width: 24px;
 }
 
 .seperator {
-    height: 24px;
-    width: 1px;
-    background-color: #D1D1D1;
+  height: 24px;
+  width: 1px;
+  background-color: #d1d1d1;
 }
-
-
-
-
