--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -5,7 +5,6 @@
   left: 0;
   right: 0;
   height: auto;
-  background: rgb(255, 255, 255);
   z-index: 989;
   overflow: hidden;
   transition: all 300ms ease-in-out;
@@ -145,6 +144,7 @@
 
 @media (min-width: 761px) {
   .show-overlay {
+    background: white;
     left: 232px;
     bottom: 0px;
   }
@@ -167,6 +167,9 @@
   }
 }
 @media (max-width: 761px) {
+  .show-overlay {
+    background: white;
+  }
   .open-contacts-arrow:active {
     background: var(--placeholder-color);
   }
@@ -198,6 +201,7 @@
 
 @media (min-width: 1340px) {
   .show-overlay {
+    background: transparent;
     position: fixed;
     top: 319px;
     right: 0;
