--- a/css/board/board.css
+++ b/css/board/board.css
@@ -1,5 +1,5 @@
 .board {
-  margin: 128px 16px 0 16px;
+  margin: 128px 16px 100px 16px;
 }
 
 .add-task {
@@ -95,6 +95,108 @@
   border-radius: 24px;
 }
 
+@media (min-width: 760px) {
+.board {
+  margin: 120px 24px 24px 256px ;
+  overflow: hidden;
+}
+}
+
+@media (min-width: 1100px) {
+.add-task {
+  position: absolute;
+  top: 136px;
+  right: 16px;
+  background-color: var(--mockup-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  padding: 3px;
+  border: none;
+  }
+  
+  .find-task {
+    margin-top: 40px;
+    height: 48px;
+    max-width: 100vw;
+    border: 1px solid #a8a8a8;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--white-color);
+  }
+  
+  .find-task input {
+    border: none;
+    height: 32px;
+    font-size: 20px;
+    color: var(--placeholder-color);
+    margin: 16px 0 16px 8px;
+  }
+  
+  .find-task button {
+    background-image: url(/assets/img/search.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 32px;
+    width: 32px;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    background-color: var(--white-color);
+    margin: 16px 8px 16px 0;
+    padding-left: 16px;
+  }
+  
+  .board-box {
+    position: relative;
+    margin-top: 24px;
+    max-width: 100vw;
+    min-width: 200px;
+  }
+  
+  .add-task-2 {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    background-color: var(--white-color);
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--mockup-color);
+    border-radius: 10px;
+    padding: 3px;
+    gap: 10px;
+  }
+  
+  .drag-area {
+    min-height: 48px;
+    max-width: 100vw;
+    font-size: 16px;
+    color: #a8a8a8;
+    background-color: #e7e7e7;
+    border: 1px dashed #a8a8a8;
+    border-radius: 10px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin-top: 16px;
+    overflow-x: auto;
+    margin-bottom: 26px;
+  }
+  
+  .drag-area-highlight {
+    background-color: #e7e7e7dd;
+  }
+  
+  .task {
+    background-color: rgb(19, 6, 251);
+    width: 252px;
+    min-height: 244px;
+    border-radius: 24px;
+  }
+}
+
 #overlay-add-id {
   position: absolute;
   top: 10px;
@@ -146,3 +248,4 @@
   background-position: center;
   border: none;
 }
+
