--- a/css/global.css
+++ b/css/global.css
@@ -110,20 +110,16 @@ input:-webkit-autofill:active {
 }
 .tooltip {
   position: relative;
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  font-weight: 700;
-  width: 20px;
-  height: 20px;
-  border: 2px solid var(--mockup-color);
-  border-radius: 50%;
-  text-align: center;
   margin-right: 4px;
-  font-size: 14px;
+  transition: all 300ms ease-in-out;
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 310px;
+  width: 320px;
   background-color: var(--mockup-color);
   color: #fff;
   text-align: left;
@@ -253,6 +249,7 @@ input {
   font-size: 18px;
   line-height: 24px;
   width: 100%;
+  margin-right: 6px;
   outline: none;
   border: none;
   cursor: pointer;
@@ -314,6 +311,11 @@ textarea::placeholder {
   textarea::placeholder {
     font-size: 16px;
   }
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 270px;
+    font-size: 14px;
+  }
 }
 @media (min-width: 761px) {
   .filled-btn:hover {
@@ -360,5 +362,13 @@ textarea::placeholder {
   }
   .tooltip:active .tooltiptext {
     visibility: visible;
+  }
+}
+
+@media (max-width: 400px) {
+  .tooltip .tooltiptext {
+    width: 200px;
+    font-size: 10px;
+    right: 10%;
   }
 }
