--- a/css/global.css
+++ b/css/global.css
@@ -117,6 +117,11 @@ input:-webkit-autofill:active {
   transition: all 300ms ease-in-out;
 }
 
+.tooltip svg {
+  height: 18px;
+  width: 18px;
+}
+
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 320px;
@@ -364,11 +369,23 @@ textarea::placeholder {
     visibility: visible;
   }
 }
+@media (max-width: 438px) {
+  .error-page span {
+    font-size: 26px;
+    transition: all 300ms ease-in-out;
+  }
+}
 
 @media (max-width: 400px) {
   .tooltip .tooltiptext {
     width: 200px;
     font-size: 10px;
     right: 10%;
+  }
+}
+
+@media (max-width: 371px) {
+  .error-page span {
+    font-size: 22px;
   }
 }
