highlight selected  menu section possible

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -6,25 +6,25 @@
         </div>
         <div id="menu-navigation-id" class="menu-wrapper">
             <div class="menu-content" >
-                <div class="footer-icon-box">
+                <div id="summary-menu-id" class="footer-icon-box">
                     <a href="/summary.html" class="footer-link">
                         <img src="/assets/svg/summary.svg" alt="Summary" class="footer-icon"> 
                         Summary
                     </a>
                 </div>
-                <div class="footer-icon-box">
+                <div id="board-menu-id" class="footer-icon-box">
                     <a href="/board.html" class="footer-link">
                         <img src="/assets/svg/board.svg" alt="Board" class="footer-icon">
                         Board
                     </a>
                 </div>
-                <div class="footer-icon-box">
+                <div id="add-task-menu-id" class="footer-icon-box">
                     <a href="/add_task.html" class="footer-link">
                         <img src="/assets/svg/add_tasks.svg" alt="Add Tasks" class="footer-icon">
                         Add Tasks
                     </a>
                 </div>
-                <div class="footer-icon-box">
+                <div id="contacts-menu-id" class="footer-icon-box">
                     <a href="/contacts.html" class="footer-link">
                         <img src="/assets/svg/contacts.svg" alt="Contacts" class="footer-icon">
                         Contacts
