--- a/css/summary/summary.css
+++ b/css/summary/summary.css
@@ -1,5 +1,5 @@
 .summary-wrapper {
-  max-height: calc(100vh - 179px);
+  height: 100vh;
   margin: 100px 16px 0 16px;
   overflow-y: auto;
   transition: all 300ms ease-in-out;
@@ -49,7 +49,6 @@
 }
 
 .summary-title h1 {
-  font-size: 54px;
   font-weight: bold;
   transition: all 300ms ease-in-out;
 }
