--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -19,6 +19,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: auto;
 }
 
+.test {
+  width: 3000px;
+}
+
 .event-style {
   margin-right: 2px;
 }
