--- a/css/board/board.css
+++ b/css/board/board.css
@@ -2,50 +2,30 @@
   margin: 128px 16px 100px 16px;
 }
 
-.add-task {
-  position: absolute;
-  top: 136px;
-  right: 16px;
-  background-color: var(--mockup-color);
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-  padding: 3px;
-  border: none;
-}
-
-.find-task {
-  margin-top: 40px;
-  height: 48px;
-  max-width: 100vw;
-  border: 1px solid #a8a8a8;
-  border-radius: 10px;
+.board-headline {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--white-color);
 }
 
-.find-task input {
-  border: none;
-  height: 32px;
-  font-size: 20px;
-  color: var(--placeholder-color);
-  margin: 16px 0 16px 8px;
+.search-at-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
 }
 
-.find-task button {
-  background-image: url(/assets/img/search.png);
-  background-repeat: no-repeat;
-  background-position: right;
-  height: 32px;
-  width: 32px;
-  border-top: none;
-  border-right: none;
-  border-bottom: none;
-  background-color: var(--white-color);
-  margin: 16px 8px 16px 0;
-  padding-left: 16px;
+.add-task {
+  background-color: #d1d1d1;
+  width: 2px;
+  height: 31px;
+  border-radius: 10px;
+}
+
+.board-search svg {
+  cursor: pointer;
+  height: 23px;
+  padding-left: 23px;
 }
 
 .board-box {
@@ -96,25 +76,13 @@
 }
 
 @media (min-width: 760px) {
-.board {
-  margin: 120px 24px 24px 256px ;
-  overflow: hidden;
-}
+  .board {
+    margin: 120px 24px 24px 256px;
+    overflow: hidden;
+  }
 }
 
 @media (min-width: 1100px) {
-.add-task {
-  position: absolute;
-  top: 136px;
-  right: 16px;
-  background-color: var(--mockup-color);
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-  padding: 3px;
-  border: none;
-  }
-  
   .find-task {
     margin-top: 40px;
     height: 48px;
@@ -126,7 +94,7 @@
     align-items: center;
     background-color: var(--white-color);
   }
-  
+
   .find-task input {
     border: none;
     height: 32px;
@@ -134,7 +102,7 @@
     color: var(--placeholder-color);
     margin: 16px 0 16px 8px;
   }
-  
+
   .find-task button {
     background-image: url(/assets/img/search.png);
     background-repeat: no-repeat;
@@ -148,14 +116,14 @@
     margin: 16px 8px 16px 0;
     padding-left: 16px;
   }
-  
+
   .board-box {
     position: relative;
     margin-top: 24px;
     max-width: 100vw;
     min-width: 200px;
   }
-  
+
   .add-task-2 {
     position: absolute;
     top: 0;
@@ -168,7 +136,7 @@
     padding: 3px;
     gap: 10px;
   }
-  
+
   .drag-area {
     min-height: 48px;
     max-width: 100vw;
@@ -184,11 +152,11 @@
     overflow-x: auto;
     margin-bottom: 26px;
   }
-  
+
   .drag-area-highlight {
     background-color: #e7e7e7dd;
   }
-  
+
   .task {
     background-color: rgb(19, 6, 251);
     width: 252px;
@@ -248,4 +216,3 @@
   background-position: center;
   border: none;
 }
-
