--- a/css/register/register_style.css
+++ b/css/register/register_style.css
@@ -76,6 +76,7 @@
 
 .login-container,
 .signin-container {
+  position: relative;
   padding: 32px 16px;
   border-radius: 30px;
   box-shadow: 0 0 14px #2a364739;
@@ -212,7 +213,8 @@
   transition: all 300ms ease-in-out;
 }
 
-.d-none {
+.d-none,
+.low-height-class {
   display: none;
 }
 
@@ -299,7 +301,7 @@
   }
 }
 
-@media (max-width: 761px) {
+@media (max-width: 760px) {
   @keyframes changeColor {
     0% {
       fill: white;
@@ -348,10 +350,111 @@
   .back-arrow-container {
     left: 0px;
   }
+  .signup-container span {
+    font-size: 14px;
+  }
+  .signup-container {
+    gap: 16px;
+  }
 }
 
-@media (max-width: 340px) {
-  .signup-container span {
-    font-size: 16px;
+/* --------------------Media - height-----------------------------*/
+@media (min-width: 761px) and (max-height: 758px) {
+  .signup-container {
+    top: 16px;
+  }
+
+  .logo svg {
+    top: calc(50% - 60px);
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 142px;
+  }
+  @keyframes animateLogo {
+    100% {
+      top: 18px;
+      left: 77px;
+      width: 64px;
+      height: 78px;
+    }
+  }
+  .container {
+    height: 100vh;
+    align-items: end;
+  }
+  .content {
+    margin-top: 0;
+  }
+  .login-container .low-height-class {
+    display: block;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+  }
+  .signin-container .low-height-class {
+    display: block;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+  .logo {
+    display: none;
+  }
+}
+@media (min-width: 761px) and (max-height: 673px) {
+  .container {
+    height: auto;
+    align-items: center;
+  }
+  .content {
+    margin-top: 96px;
+  }
+}
+
+@media (max-width: 760px) and (max-height: 850px) {
+  .signup-container {
+    position: absolute;
+    top: 67px;
+    right: 64px;
+    margin: 0;
+    justify-content: end;
+    top: 16px;
+  }
+  .container {
+    height: 100vh;
+    align-items: end;
+  }
+  .content {
+    margin-top: 0;
+  }
+  .login-container .low-height-class {
+    display: block;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+  }
+  .signin-container .low-height-class {
+    display: block;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+  .logo {
+    display: none;
+  }
+}
+
+@media (max-width: 760px) and (max-height: 850px) {
+  .container {
+    height: auto;
+    align-items: center;
+  }
+  .content {
+    margin-top: 96px;
+  }
+}
+@media (max-width: 423px) and (max-height: 850px) {
+  .signin-container .low-height-class {
+    display: none;
   }
 }
