--- a/css/register/register_style.css
+++ b/css/register/register_style.css
@@ -212,249 +212,11 @@
   border-radius: 50%;
   transition: all 300ms ease-in-out;
 }
-
+.login-container .low-height-class,
+.sign-container .low-height-class {
+  transition: all 300ms ease-in-out;
+}
 .d-none,
 .low-height-class {
   display: none;
-}
-
-@media (max-width: 1156px) {
-  .content {
-    margin-top: 260px;
-  }
-}
-
-@media (min-width: 761px) {
-  .change-color {
-    fill: var(--mockup-color);
-  }
-  .logo {
-    background: white;
-  }
-  @keyframes animateLogo {
-    100% {
-      top: 80px;
-      left: 77px;
-      width: 80px;
-      height: 102px;
-    }
-  }
-  .signup-container {
-    position: absolute;
-    top: 67px;
-    right: 64px;
-    margin: 0;
-    justify-content: end;
-  }
-  .content h1 {
-    font-size: 61px;
-  }
-  .login-btns-container {
-    flex-direction: row;
-  }
-  .register-small {
-    width: 102px !important;
-  }
-  .back-arrow-container:hover {
-    background: var(--mockup-color);
-  }
-  .back-arrow-container:active {
-    background: var(--focus-color-btn);
-  }
-  .back-arrow-container:active svg path {
-    fill: white;
-  }
-  .success-msg-popup {
-    transform: translate(-50%, -800%);
-  }
-  .success-msg-popup.slide-sm {
-    transform: translate(-50%, -420%);
-  }
-}
-
-@media (min-width: 949px) {
-  .signup-container {
-    right: 80px;
-  }
-}
-
-@media (min-width: 1156px) {
-  .success-msg-popup.slide-sm {
-    transform: translate(-50%, -500%);
-  }
-}
-
-@media (min-width: 1200px) {
-  .logo svg {
-    top: calc(50% - 167px);
-    left: calc(50% - 137px);
-    width: 334px;
-    height: 274px;
-  }
-  @keyframes animateLogo {
-    100% {
-      top: 80px;
-      left: 77px;
-      width: 100px;
-      height: 122px;
-    }
-  }
-}
-
-@media (max-width: 760px) {
-  @keyframes changeColor {
-    0% {
-      fill: white;
-    }
-    100% {
-      fill: var(--mockup-color);
-    }
-  }
-  .logo svg {
-    top: calc(50% - 76px);
-    left: calc(50% - 60px);
-    width: 120px;
-    height: 142px;
-  }
-  @keyframes animateLogo {
-    100% {
-      top: 80px;
-      left: 77px;
-      width: 64px;
-      height: 78px;
-    }
-  }
-
-  .back-arrow-container:active {
-    background: var(--placeholder-color);
-  }
-  .success-msg-popup {
-    transform: translate(-50%, -1000%);
-  }
-  .success-msg-popup.slide-sm {
-    transform: translate(-50%, -520%);
-  }
-  .line {
-    margin-top: 6px;
-    width: 70px;
-  }
-}
-
-@media (max-width: 500px) {
-  .content {
-    margin-top: 200px;
-  }
-}
-
-@media (max-width: 400px) {
-  .back-arrow-container {
-    left: 0px;
-  }
-  .signup-container span {
-    font-size: 14px;
-  }
-  .signup-container {
-    gap: 16px;
-  }
-}
-
-/* --------------------Media - height-----------------------------*/
-@media (min-width: 761px) and (max-height: 758px) {
-  .signup-container {
-    top: 16px;
-  }
-
-  .logo svg {
-    top: calc(50% - 60px);
-    left: calc(50% - 60px);
-    width: 120px;
-    height: 142px;
-  }
-  @keyframes animateLogo {
-    100% {
-      top: 18px;
-      left: 77px;
-      width: 64px;
-      height: 78px;
-    }
-  }
-  .container {
-    height: 100vh;
-    align-items: end;
-  }
-  .content {
-    margin-top: 0;
-  }
-  .login-container .low-height-class {
-    display: block;
-    position: absolute;
-    top: 16px;
-    left: 16px;
-  }
-  .signin-container .low-height-class {
-    display: block;
-    position: absolute;
-    top: 16px;
-    right: 16px;
-  }
-  .logo {
-    display: none;
-  }
-}
-@media (min-width: 761px) and (max-height: 673px) {
-  .container {
-    height: auto;
-    align-items: center;
-  }
-  .content {
-    margin-top: 96px;
-  }
-}
-
-@media (max-width: 760px) and (max-height: 850px) {
-  .signup-container {
-    position: absolute;
-    top: 67px;
-    right: 64px;
-    margin: 0;
-    justify-content: end;
-    top: 16px;
-  }
-  .container {
-    height: 100vh;
-    align-items: end;
-  }
-  .content {
-    margin-top: 0;
-  }
-  .login-container .low-height-class {
-    display: block;
-    position: absolute;
-    top: 16px;
-    left: 16px;
-  }
-  .signin-container .low-height-class {
-    display: block;
-    position: absolute;
-    top: 16px;
-    right: 16px;
-  }
-  .logo {
-    display: none;
-  }
-}
-
-@media (max-width: 760px) and (max-height: 850px) {
-  .container {
-    height: auto;
-    align-items: center;
-  }
-  .content {
-    margin-top: 96px;
-  }
-}
-@media (max-width: 423px) and (max-height: 850px) {
-  .signin-container .low-height-class {
-    display: none;
-  }
 }
