--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -235,6 +235,11 @@
     width: 12px;
     height: 12px;
   }
+  .subtask-err-msg {
+    font-size: 16px;
+    top: 1px;
+    left: 85px;
+  }
 }
 
 @media (max-width: 418px) {
