--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -32,6 +32,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: var(--err-msg-color);
   top: 4px;
   left: 108px;
+  transition: all 300ms ease-in-out;
 }
 
 .content-container {
