--- a/css/board/board.css
+++ b/css/board/board.css
@@ -95,12 +95,14 @@
   max-width: 100vw;
   font-size: 16px;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   overflow-x: auto;
   padding-block: 16px;
 }
-
+.drag-area:first-child {
+  padding-left: 24px;
+}
 .task {
   background-color: rgb(19, 6, 251);
   width: 252px;
