--- a/css/board/board_media.css
+++ b/css/board/board_media.css
@@ -43,24 +43,32 @@
   .board-content-wrapper {
     display: flex;
     justify-content: space-between;
-    max-height: calc(100vh - 283px);
-    overflow: hidden;
+    max-height: calc(100vh - 300px);
+    box-shadow: 0 0 14px #2a364739;
+    border-radius: 24px;
+    margin-top: 8px;
+    padding: 32px;
   }
   .board-wrapper {
     margin: 206px 0 0 calc(232px + 32px);
     width: calc(100vw - 232px - 64px);
+    max-width: 1920px;
   }
   .board-headline h1 {
     font-size: 64px;
+    margin-left: 30px;
   }
   .board-box {
     height: 100vh;
-    width: 246px;
     margin: 0;
+  }
+  .board-box h2 {
+    margin-bottom: 16px;
   }
   .drag-area {
     flex-direction: column;
     padding: 0;
+    padding-left: 0 !important;
   }
   .drag-area-hover-default {
     min-height: 64px;
