--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -20,6 +20,7 @@
   align-items: start;
   justify-content: start;
   margin: 45px 0 48px 16px;
+  transition: all 300ms ease-in-out;
 }
 .open-contacts-arrow {
   position: absolute;
@@ -235,5 +236,33 @@
 @media (min-width: 2500px) {
   .show-overlay {
     transform: translateY(100%);
+  }
+}
+
+@media (max-height: 700px) {
+  .open-contacts-header {
+    margin: 16px 0 16px 16px;
+  }
+  .show-overlay {
+    max-height: 479px;
+    overflow-y: auto;
+  }
+  .open-contacts-header h1 {
+    font-size: 41px;
+  }
+  .open-contacts-header span,
+  .contact-method {
+    font-size: 16px;
+  }
+  .open-contacts-name span {
+    font-size: 30px;
+  }
+  .open-contacts-circle {
+    height: 60px;
+    width: 60px;
+    font-size: 23px;
+  }
+  .contact-info h2 {
+    font-size: 20px;
   }
 }
