--- a/css/global.css
+++ b/css/global.css
@@ -393,3 +393,10 @@ textarea::placeholder {
     font-size: 16px;
   }
 }
+
+@media (min-width: 1341px) and (max-height: 455px) {
+  .tooltip .tooltiptext {
+    border-radius: 20px 0px 20px 20px;
+    bottom: -580%;
+  }
+}
