--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -120,7 +120,7 @@
     line-height: 73.2px;
   }
   .content-bottom-container {
-    margin: 0px 80px 0 calc(232px + 96px);
+    margin: 0px 80px 0 calc(232px + 64px);
     max-width: 1920px;
   }
   .editable-span {
@@ -269,5 +269,92 @@
   .success-msg-popup {
     top: calc(50%);
     left: 1180px;
+  }
+}
+
+@media (min-width: 1341px) and (max-height: 900px) {
+  .section-title {
+    top: 116px;
+  }
+  .content-container {
+    margin: 200px 70px 0px calc(232px + 64px);
+    max-height: calc(100vh - 290px);
+  }
+}
+@media (min-width: 1341px) and (max-height: 700px) {
+  .content-container {
+    margin: 179px 70px 0px calc(232px + 64px);
+    max-height: calc(100vh - 268px);
+    box-shadow: none;
+  }
+}
+@media (min-width: 1341px) and (max-height: 573px) {
+  .section-title {
+    font-size: 47px;
+    top: 100px;
+  }
+  .content-container {
+    margin: 162px 70px 0px calc(232px + 64px);
+    max-height: calc(100vh - 214px);
+  }
+  .content-bottom-container {
+    height: auto;
+    padding-bottom: 4px;
+  }
+}
+@media (max-width: 1340px) and (max-height: 900px) {
+  .section-title {
+    top: 116px;
+  }
+  .content-container {
+    margin: 200px 0px 0px calc(232px);
+    max-height: calc(100vh - 290px);
+  }
+}
+
+@media (max-width: 1340px) and (max-height: 573px) {
+  .section-title {
+    font-size: 47px;
+    top: 100px;
+  }
+  .content-container {
+    margin: 150px 0px 0px calc(232px);
+    max-height: calc(100vh - 240px);
+  }
+}
+@media (max-width: 1340px) and (max-height: 400px) {
+  .content-bottom-container {
+    height: auto;
+    padding-bottom: 4px;
+  }
+}
+@media (max-width: 760px) and (max-height: 900px) {
+  .content-container {
+    margin: 180px 0px 0px 0;
+    max-height: calc(100vh - 340px);
+  }
+}
+
+@media (max-width: 760px) and (max-height: 573px) {
+  .section-title {
+    font-size: 47px;
+    top: 100px;
+  }
+  .content-container {
+    margin: 150px 0px 0px 0;
+    max-height: calc(100vh - 310px);
+  }
+}
+@media (max-width: 760px) and (max-height: 516px) {
+  .section-title {
+    display: none;
+  }
+  .content-container {
+    margin: 100px 0px 0px 0;
+    max-height: calc(100vh - 234px);
+  }
+  .content-bottom-container {
+    height: auto;
+    padding-bottom: 4px;
   }
 }
