--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -205,3 +205,12 @@
     font-size: 12px;
   }
 }
+
+@media (min-width: 1341px) and (max-height: 752px) {
+  .show-contacts-header {
+    margin: 32px 0 0 32px;
+  }
+  .show-contacts-header h1 {
+    font-size: 48px;
+  }
+}
