--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -239,13 +239,20 @@
   }
 }
 
-@media (max-height: 700px) {
+@media (max-height: 700px) and (max-width: 1340px) {
   .open-contacts-header {
     margin: 16px 0 16px 16px;
   }
   .show-overlay {
     max-height: 479px;
+    padding-bottom: 8px;
     overflow-y: auto;
+  }
+  .contact-method {
+    gap: 6px;
+  }
+  .contact-info {
+    gap: 8px;
   }
   .open-contacts-header h1 {
     font-size: 41px;
@@ -264,5 +271,37 @@
   }
   .contact-info h2 {
     font-size: 20px;
+  }
+}
+@media (max-height: 752px) and (min-width: 1341px) {
+  .show-overlay {
+    top: 216px;
+  }
+}
+@media (max-height: 675px) and (min-width: 1341px) {
+  .contact-info {
+    gap: 8px;
+  }
+  .open-contacts-circle {
+    width: 95px;
+    height: 95px;
+    font-size: 32px;
+  }
+  .contact-name span:first-child {
+    font-size: 32px;
+  }
+}
+@media (max-height: 578px) and (min-width: 1341px) {
+  .show-overlay {
+    box-shadow: none;
+    max-height: 340px;
+    overflow-y: auto;
+    padding: 0px 8px 16px 32px;
+  }
+  .contact-method {
+    gap: 6px;
+  }
+  .contact-info {
+    margin-top: 8px;
   }
 }
