--- a/css/register/register_media.css
+++ b/css/register/register_media.css
@@ -194,18 +194,19 @@
 @media (max-width: 760px) and (max-height: 850px) {
   .signup-container {
     position: absolute;
-    top: 67px;
-    right: 64px;
+
     margin: 0;
     justify-content: end;
     top: 16px;
+    right: 32px;
+    gap: 8px;
   }
   .container {
     height: 100vh;
-    align-items: end;
+    align-items: center;
   }
   .content {
-    margin-top: 0;
+    margin-top: 96px;
   }
   .login-container .low-height-class {
     display: block;
@@ -224,15 +225,6 @@
   }
 }
 
-@media (max-width: 760px) and (max-height: 850px) {
-  .container {
-    height: auto;
-    align-items: center;
-  }
-  .content {
-    margin-top: 96px;
-  }
-}
 @media (max-width: 423px) and (max-height: 850px) {
   .signin-container .low-height-class {
     display: none;
@@ -246,5 +238,70 @@
   .login-container .low-height-class {
     top: 26px;
     left: 16px;
+  }
+}
+@media (max-width: 760px) and (max-height: 753px) {
+  .signin-container,
+  .login-container {
+    box-shadow: none;
+    padding-block: 0;
+  }
+  .legal-information-container {
+    margin: 8px;
+  }
+  .login-btns-container {
+    margin-top: 8px;
+  }
+  .login-container .low-height-class,
+  .signin-container .low-height-class {
+    display: none;
+  }
+  .logo {
+    display: block;
+  }
+  .logo svg {
+    top: calc(50% - 60px);
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 142px;
+  }
+  @keyframes animateLogo {
+    100% {
+      top: 16px;
+      left: 32px;
+      width: 64px;
+      height: 78px;
+    }
+  }
+  .back-arrow-container {
+    left: 95%;
+  }
+}
+@media (max-width: 760px) and (max-height: 499px) {
+  .login-fields-gap {
+    margin: 16px 0 16px 0;
+    gap: 6px;
+  }
+  .logo svg {
+    top: calc(50% - 60px);
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 142px;
+  }
+  @keyframes animateLogo {
+    100% {
+      top: 8px;
+      left: 32px;
+      width: 44px;
+      height: 7ch;
+    }
+  }
+}
+@media (max-width: 760px) and (max-height: 403px) {
+  .container {
+    display: block;
+  }
+  .signup-container {
+    top: -90px;
   }
 }
