--- a/css/register/register_media.css
+++ b/css/register/register_media.css
@@ -136,6 +136,11 @@
   .signup-container {
     gap: 16px;
   }
+  .login-container,
+  .signin-container {
+    box-shadow: none;
+    padding: 0;
+  }
 }
 
 /* --------------------Media - height-----------------------------*/
